Add card con articulos en page Articulos

--- a/TPWeb-Fernandez-Zumsteind/TPWeb-Fernandez-Zumsteind.csproj
+++ b/TPWeb-Fernandez-Zumsteind/TPWeb-Fernandez-Zumsteind.csproj
@@ -113,6 +113,16 @@
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Modelo\Dominio.csproj">
+      <Project>{81b5991d-b7ad-48b1-9f26-d5c45b0eaef0}</Project>
+      <Name>Dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Negocio\Negocio.csproj">
+      <Project>{bbef6aff-938d-4e17-928c-a131023a1b54}</Project>
+      <Name>Negocio</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
