--- a/TPWeb-Fernandez-Zumsteind/TPWeb-Fernandez-Zumsteind.csproj
+++ b/TPWeb-Fernandez-Zumsteind/TPWeb-Fernandez-Zumsteind.csproj
@@ -67,6 +67,7 @@
     <Content Include="administrar.aspx" />
     <Content Include="agregar.aspx" />
     <Content Include="Articulos.aspx" />
+    <Content Include="carrito.aspx" />
     <Content Include="default.aspx" />
     <Content Include="eliminar.aspx" />
     <Content Include="Global.asax" />
@@ -94,6 +95,13 @@
     </Compile>
     <Compile Include="Articulos.aspx.designer.cs">
       <DependentUpon>Articulos.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="carrito.aspx.cs">
+      <DependentUpon>carrito.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="carrito.aspx.designer.cs">
+      <DependentUpon>carrito.aspx</DependentUpon>
     </Compile>
     <Compile Include="default.aspx.cs">
       <DependentUpon>default.aspx</DependentUpon>
